Added a form into html file

--- a/webpage4.html
+++ b/webpage4.html
@@ -21,5 +21,36 @@
     <body>
         <p class="para1">Hello World</p>
         <p>This paragraph is not affected by the style.</p>
+        <table border="0">
+            <form>
+                <tr>
+                    <td><label>Enter the name:</label></td>
+                    <td><input type="text" name="n"></td>
+                </tr>
+                <tr>
+                    <td><label>Enter password:</label></td>
+                    <td><input type="password" name="n"></td>
+                </tr>
+                <tr>
+                    <td><label>Gender:</label></td>
+                    <td><input type="radio" name="r1" value="male">Male
+                    &nbsp;&nbsp;
+                    <input type="radio" name="r1" value="female" selected>Female
+                    </td>
+                </tr>
+                <tr>
+                    <td><label>Address:</label></td>
+                    <td><textarea rows="5" cols="10" name="addr"></textarea></td>
+                </tr>
+                <tr>
+                    <td><label>Email:</label></td>
+                    <td><input type="email" name="n"></td>
+                </tr>
+                <tr>
+                    <td><input type="submit" value="OK"></td>
+                    <td><input type="reset" value="RESET"></td>
+                </tr>
+            </form>
+        </table>
     </body>
 </html>
